[gd_scene load_steps=6 format=3 uid="uid://bpofx8q63wjj0"]

[ext_resource type="Texture2D" uid="uid://dxlehoigr58qc" path="res://Graphics/Windowskins/choice 1.png" id="1_46wjd"]
[ext_resource type="Script" path="res://Scripts/UI/Hud.gd" id="1_g4d71"]
[ext_resource type="Theme" uid="uid://bkerhfpds52c6" path="res://Scenes/UI/Hud/menu_buttons.tres" id="2_ivelv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dfaix"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_epnyc"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0

[node name="HUD" type="CanvasLayer"]
layer = 50
script = ExtResource("1_g4d71")

[node name="MainWindowContainer" type="PanelContainer" parent="."]
anchors_preset = -1
anchor_left = 0.6875
anchor_top = 0.0208333
anchor_right = 0.984375
anchor_bottom = 0.625
theme_override_styles/panel = SubResource("StyleBoxEmpty_dfaix")
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[node name="MainWindow" type="NinePatchRect" parent="MainWindowContainer"]
layout_mode = 2
texture = ExtResource("1_46wjd")
region_rect = Rect2(2, 2, 44, 44)
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="PanelContainer" type="PanelContainer" parent="MainWindowContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_epnyc")

[node name="Buttons" type="VBoxContainer" parent="MainWindowContainer/PanelContainer"]
layout_mode = 2
theme = ExtResource("2_ivelv")

[node name="PokedexButton" type="Button" parent="MainWindowContainer/PanelContainer/Buttons"]
layout_mode = 2
button_mask = 0
text = "Pokedex"
alignment = 0

[node name="PokemonButton" type="Button" parent="MainWindowContainer/PanelContainer/Buttons"]
layout_mode = 2
button_mask = 0
text = "Pokemon"
alignment = 0

[node name="BagButton" type="Button" parent="MainWindowContainer/PanelContainer/Buttons"]
layout_mode = 2
button_mask = 0
text = "Bag"
alignment = 0

[node name="TrainerButton" type="Button" parent="MainWindowContainer/PanelContainer/Buttons"]
layout_mode = 2
button_mask = 0
text = "TRAINER NAME"
alignment = 0

[node name="SaveButton" type="Button" parent="MainWindowContainer/PanelContainer/Buttons"]
layout_mode = 2
button_mask = 0
text = "Save"
alignment = 0

[node name="OptionsButton" type="Button" parent="MainWindowContainer/PanelContainer/Buttons"]
layout_mode = 2
button_mask = 0
text = "Options"
alignment = 0

[node name="ExitButton" type="Button" parent="MainWindowContainer/PanelContainer/Buttons"]
layout_mode = 2
button_mask = 0
text = "Exit"
alignment = 0
